gitops/apps/proxy/base/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: onprem-proxy
  labels:
    app: jellyfin
spec:
  ports:
    - protocol: TCP
      name: http
      port: 8096
  clusterIP: None
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: jellyfin-1
  namespace: onprem-proxy
  labels:
    kubernetes.io/service-name: jellyfin
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 8096
endpoints:
  - addresses:
      - "10.0.1.1"
