gitops/apps/proxy/base/jellyfin/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
spec:
  parentRefs:
  - name: http-gateway-netbird
    namespace: istio-ingress
    sectionName: https
  hostnames:
  - "jellyfin.barracuda.net.konst.fish"
  rules:
  - backendRefs:
    - name: jellyfin
      port: 8096
